storage/falcon/SRLIndexDelete.h
@@ -38,7 +38,6 @@ public:
 	SRLIndexDelete();
 	virtual ~SRLIndexDelete();
 
-	int			tableSpaceId;
 	int32		indexId;
 	int32		recordId;
 	int32		length;
